Fix section spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,3 +42,6 @@ div.highlighter-rouge { margin-bottom: 0.15em; }
 
 // Logo
 .logo { height: 200px; margin-right: 0.5em; margin-bottom: 0.5em; float: left; }
+
+// Spacing
+div.highlighter-rouge + h1 { margin-top: 1em; }
